# btp

./: .gitignore  ADDRESS_MONITOR_GUIDE.md  COPY_TRADING_GUIDE.md  QUICKSTART.md  README.md  SWAP_GUIDE_NEW_FEATURES.md  V3_AUTOTRADING_SYSTEM_ARCHITECTURE.md  V3_IMPLEMENTATION_PLAN.md  findings.md  progress.md  task_plan.md
backend/: .env.example  package.json  pnpm-lock.yaml  server.js
backend/services/: addressMonitor.js  bscMonitor.js  copyTradingExecutor.js  dexscreener.js  (+5 more)
doc/: COPY_TRADING_IMPLEMENTATION_SUMMARY.md  LIMIT_ORDER_BACKEND.md  LIMIT_ORDER_IMPLEMENTATION_SUMMARY.md  README.md  SWAP_GUIDE.md  WHATS_NEW.md
frontend/: package.json  pnpm-lock.yaml
v3/: .env.example  docker-compose.yml
v3/backend/: Dockerfile  alembic.ini  pyproject.toml
v3/backend/alembic/: env.py
v3/backend/alembic/versions/: 0001_initial.py
v3/backend/app/: config.py  main.py
v3/backend/app/analyzers/: llm_client.py  onchain_analyzer.py  scoring_engine.py  telegram_analyzer.py  tweet_analyzer.py
v3/backend/app/api/: analysis_routes.py  config_routes.py  router.py  signal_routes.py  system_routes.py  ws.py
v3/backend/app/collectors/: base.py  onchain_bsc.py  onchain_solana.py  price_quote.py  telegram_monitor.py  x_kol.py
v3/backend/app/infra/: api_key_pool.py  redis_client.py  scheduler.py
v3/backend/app/models/: __init__.py  analysis.py  base.py  config.py  notification.py  signal.py
v3/backend/app/notifiers/: telegram_bot.py  telegram_notifier.py  ws_pusher.py
v3/backend/app/schemas/: analysis.py  config.py  signal.py
v3/backend/app/utils/: logger.py
(+46 files in other folders)
