[tool.poetry]
name = "v3-signal-platform"
version = "0.1.0"
description = "Crypto signal collection and analysis platform"
authors = ["dev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Web framework
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.30" }
# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.29"
alembic = "^1.13"
# Redis
redis = { extras = ["hiredis"], version = "^5.0" }
# Task scheduling
apscheduler = "^3.10"
# LLM (DeepSeek via OpenAI-compatible API)
openai = "^1.40"
# X/Twitter scraping
twikit = "^2.0"
# Telegram
telethon = "^1.36"
python-telegram-bot = "^21"
# HTTP client
httpx = "^0.27"
# Utilities
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
structlog = "^24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
